--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,13 @@
  *= require_tree .
  *= require_self
  */
+html, body{
+	margin: 0;
+	padding: 0;
+}
+
 body {
-	background-color: #000;
+	background-color: #1D1D29;
 	color: #FFFFFF;
 }
+
