--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,1 @@
-<h1>Incoming: Best Sneaker App in the Philippines!</h1>
+<em><h1><a class="red">Incoming</a>: Best Sneaker App in the Philippines!</h1></em>
