--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,13 +13,19 @@
  *= require_tree .
  *= require_self
  */
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 html, body{
 	margin: 0;
 	padding: 0;
 }
 
 body {
-	background-color: #1D1D29;
-	color: #FFFFFF;
+	background-color: #1d1d29;
+	color: #ffffff;
+	font-family: 'Roboto', sans-serif;
 }
 
+.red{
+	color: #db3b5c;
+}
