--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,1 @@
-<em><h1><a class="red">Incoming</a>: Best Sneaker App in the Philippines!</h1></em>
+<em><h1><a class="red">Incoming</a>: Best Sneaker App in the <a class="underline">Philippines</a>!</h1></em>
