Add Logo to Document

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,6 @@
 <div class ="content-center">
-	<em><h1><a class="red">Incoming</a>: Best Sneaker App in the <a class="underline">Philippines</a>!</h1></em>
+	<%= image_tag "px-logo.png", class: "logo" %>
+	<em><h2><a class="red">Incoming</a>: Best Social, Buy-Sell-Trade, Sneaker App in the <a class="underline">Philippines</a>!</h2></em>
+	<hr>
+	<p class="footer"><em>Copyright &copy; Project X by David and IJ 2017</em></p>
 </div>
