--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -2,15 +2,24 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-h1{
-	text-align: center;
+h3{
 	font-weight: 300;
 }
 
 .content-center{
-	margin-top: auto;
-	height: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	margin-top: 10%;
+	text-align: center;
+}
+
+.logo{
+	height: 80px;
+}
+
+hr{
+	margin-top: 21px;
+	width: 40%;
+}
+
+.footer{
+	font-size: 14px;
 }
